--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chai": "^5.2.0",
     "chromedriver": "^133.0.1",
     "mocha": "^11.1.0",
+    "resemblejs": "^5.0.0",
     "selenium-webdriver": "^4.28.1"
   }
 }
